# rib-sample

./: .gitignore  .travis.yml  Main.hs  README.md  default.nix  hie.yaml  rib-sample.cabal
.github/workflows/: ci.yaml  deploy.yaml
a/: fourth-post.tex  fourth-post.yaml
content/: first-post.md  second-post.md
src/: Main.hs  Route.hs
