cabal-version:       2.4

name:                rib-sample
version:             0.1.0.0
license:             BSD-3-Clause
author:              Your Name
maintainer:          your@email
category:            Web

executable rib-sample
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , rib
                     , clay
                     , shake
                     , lucid
  default-language:    Haskell2010
