cabal-version: 2.4
name: rib-sample
version: 0.1.0.0
license: BSD-3-Clause
maintainer: your@email
author: Your Name
category: Web

executable rib-sample
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.12.0.0,
        rib ^>=0.4,
        clay -any,
        shake -any,
        lucid -any
